project/css/new-age.css
/* ... */
@media (min-width: 992px) {
  header.masthead {
    height: 100vh;
    min-height: 775px;
    padding-top: 0;
    padding-bottom: 0;
  }
  header.masthead .header-content {
    margin-bottom: 0;
    text-align: left;
  }
  header.masthead .header-content h1 {
    font-size: 35px;
  }
}

.my-auto {
  margin-top: 25%\0 !important;
}

section.missionStatement {
  z-index: 3;
  position: relative;
  padding: 100px 0 50px 0;
}

section.missionStatement h2 {
  font-size: 50px;
  margin-top: 0;
}

section.missionStatement .badges .badge-link {
  display: block;
  margin-bottom: 25px;
}

section.missionStatement .badges .badge-link:last-child {
  margin-bottom: 0;
}

section.missionStatement .badges .badge-link img {
  height: 60px;
}

@media (min-width: 768px) {
  section.missionStatement .badges .badge-link {
    display: inline-block;
    margin-bottom: 0;
  }
}

@media (min-width: 768px) {
  section.missionStatement h2 {
    font-size: 70px;
  }
}

.foundingBanks {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 50px;
}

.foundingBank {
  display: flex;
  align-content: center;
  justify-content: center;
  align-items: center;
  color: #0090EA;
  font-weight: bold;
  text-transform: uppercase;
}

@media (min-width: 768px) {
  .divider {
    border-left: 1px solid gray;
  }
}

section.hiw {
  padding-bottom: 0px;
}

section.hiw .section-heading {
  margin-top: 30px;
}

section.hiw .container {
  display: flex;
  flex-direction: column;
}

section.hiw .content {
  display: flex;
  flex-direction: row;
}

section.hiw .content div {
  display: flex;
  justify-content: center;
}

section.hiw .stats {
  background: url("../img/stats.png") no-repeat center;
  background-size: contain;
  min-height: 290px;
}

.img-fluid {
  max-width: 100%;
  height: auto;
  max-height: 200px;
}

@media (min-width: 768px) {
  .img-fluid {
    max-height: 310px;
  }
}

section.hiw .dashedLine {
  width: 60%;
  height: 60%;
  align-self: center;
}

section.hiw .section-heading {
  display: flex;
  flex-direction: column;
}

section.hiw .section-heading h2 {
  margin-top: 0;
}

section.hiw .section-heading p {
  margin-bottom: 0;
}

section.standardization {
  padding-top: 30px;
  padding-bottom: 30px;
}

@media (min-width: 992px) {
  section.standardization {
    padding-bottom: 100px;
    padding-top: 100px;
  }
}

/* @media (min-width: 992px) {
  section.standardization .ui-large {
    width: 60%;
  }
} */

/* section.standardization .container {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  align-content: flex-end;
  align-self: flex-end;
  margin-right: 0px;
  padding-right: 0px;
  margin-left: auto;
  /* smaller margin-left looks better but then the screenshot isn't off the edge of the page /
} */

section.standardization .container {
  display: flex;
  flex-direction: column;
}

@media (min-width: 992px) {
  section.standardization .container {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    align-content: flex-end;
    align-self: flex-end;
    margin-right: 0px;
    padding-right: 0px;
    margin-left: auto;
  }
}

section.standardization .showLarge {
  display: none;
}

section.standardization .hideLarge {
  display: inline;
  max-width: 200px;
  align-self: center;
}

@media (min-width: 768px) {
  section.standardization .hideLarge {
    max-width: 400px;
  }
}

@media (min-width: 992px) {
  section.standardization .showLarge {
    display: inline;
  }

  section.standardization .hideLarge {
    display: none;
  }
}

@media (min-width: 992px) {
  section.standardization .section-heading {
    padding-right: 10%;
  }
}

section.standardization .ui-large {
  align-self: flex-end;
  width: 35%;
}

section.benefits {
  background-image: linear-gradient(#0085D8, #68BDF2);
  /*
  background: -webkit-gradient(linear, right top, left top, from(#7b4397), to(#dc2430));
  background: linear-gradient(to left, #7b4397, #dc2430);
  */
  padding-top: 65px;
  position: relative;
  margin-bottom: 0px;
}

@media (min-width: 768px) {
  section.benefits {
    margin-bottom: 200px;
  }
}

section.benefits:after {
  content: " ";
  position: absolute;
  display: block;
  height: 37%;
  width: 100%;
  top: 70%;
  left: 0;
  z-index: -1;
  background: #68BDF2;
  -ms-transform: skewY(-8deg);
  -webkit-transform: skewY(-8deg);
  transform: skewY(-8deg);
}

@media (min-width: 768px) {
  section.benefits:after {
    content: " ";
    position: absolute;
    display: block;
    height: 37%;
    width: 100%;
    top: 80%;
    left: 0;
    z-index: -1;
    background: #68BDF2;
    -ms-transform: skewY(-8deg);
    -webkit-transform: skewY(-8deg);
    transform: skewY(-8deg);
  }
}

section.benefits .platformBenefits {
  width: 85%;
  margin-top: 30px;
  margin-bottom: 50px;
}

section.benefits h5 {
  color: white;
}

section.benefits .beneficiaries {
  display: flex;
}

section.benefits .beneficiaries .row {
  flex: 1;
}

section.benefits .beneficiaries li {
  text-align: left;
}

section.benefits li .emphasize {
  font-weight: 900;
}

section.overview {
  padding-top: 70px;
  padding-bottom: 50px;
}

section.overview h5 {
  margin-bottom: 30px;
}

@media (min-width: 768px) {
  section.overview h5 {
    margin-bottom: 100px;
  }
}

section.overview .platformOverview {
  width: 80%;
  max-width: 720px;
  align-self: center;
}

.mobile {
  display: inline;
}

.full {
  display: none;
}

@media (min-width: 576px) {
  .mobile {
    display: none;
  }

  .full {
    display: inline;
  }
}

section.contact {
  background: -webkit-gradient(linear, right top, left top, from(gray), to(white));
  background: linear-gradient(to bottom, gray, white);
  display: flex;
  justify-content: space-between;
}

section.contact h5, h4 {
  color: white;
}

section.contact h4 {
  padding: 10px;
  margin: 0;
}

section.contact .contactInfo {
  border-radius: 3px;
  text-align: left;
}
/* ... */

